fix scroll on mobile

--- a/assets/css/zrq.css
+++ b/assets/css/zrq.css
@@ -13,6 +13,9 @@ GENERIC
   color: #af8c45
 }
 
+image {
+  max-width: 100% !important;
+}
 
 /* 
 =================
